--- a/ansible/roles/master/tasks/main.yml
+++ b/ansible/roles/master/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: install irc server
+  apt:
+    pkg: "{{ item }}"
+    state: present
+  with_items:
+    - charybdis
+  when: ansible_hostname in groups['buildmaster']
+
 - include: master.yml tags=master
   when: ansible_hostname in groups['buildmaster']
 
