Upgrade debian bot to Debian 8.1 for GCC 4.9 required by dolphin compile.
Consequences are that the virtual machine appears to require 2GB RAM for
a consistently successful compile, and buildslave start through the service
module no longer works with a state of started (restarted is needed) after the
systemd introduction.

--- a/ansible/group_vars/unix.yml
+++ b/ansible/group_vars/unix.yml
@@ -13,7 +13,7 @@ ntp_servers:
 # default apt mirrors for debian and ubuntu
 debian_mirror: http://http.debian.net/debian
 debian_security_mirror: http://security.debian.org/
-debian_release: wheezy
+debian_release: jessie
 
 ubuntu_mirror: http://us.archive.ubuntu.com/ubuntu/
 ubuntu_security_mirror: http://security.ubuntu.com/ubuntu
