--- a/ansible/roles/common/tasks/hosts.yml
+++ b/ansible/roles/common/tasks/hosts.yml
@@ -1,16 +1,15 @@
 ---
-- name: Add servers to unix /etc/hosts
-  sudo: yes
-  lineinfile:
-    dest: "{{ etc_hosts_file }}"
-    state: present
-    insertafter: EOF
-    line: "{{ buildmaster_host }} {{ buildmaster_server_name }} {{ central_server_name }} {{ dl_server_name }} {{ changes_server_name }} {{ fifoci_server_name }}"
+- name: Copy base hosts file for unix
+  copy:
+    src: hosts.unix
+    dest: ~/hosts
   when: ansible_hostname in groups['unix']
 
-# When ansible's windows support includes lineinfile, this windows task can be
-# removed.
+- name: Add servers to unix /etc/hosts
+  shell: "cat ~/hosts >> {{ etc_hosts_file }}"
+  when: ansible_hostname in groups['unix']
+
 - name: Add servers to windows /etc/hosts
-  raw: "echo {{ buildmaster_host }} {{ buildmaster_server_name }} {{ central_server_name }} {{ dl_server_name }} {{ changes_server_name }} {{ fifoci_server_name }} >> {{ etc_hosts_file }}"
+  raw: "type c:\\vagrant\\ansible\\roles\\common\\files\\hosts.windows >> {{ etc_hosts_file }}"
   when: ansible_hostname in groups['windows']
 
