Disable central modules by code injection instead of explicit removal.

--- a/ansible/roles/master/tasks/central.yml
+++ b/ansible/roles/master/tasks/central.yml
@@ -34,6 +34,19 @@
   args:
     creates: /home/central/central.py
 
+- name: central | Disable modules
+  sudo: yes
+  sudo_user: central
+  lineinfile:
+    dest: "/home/central/{{ item }}.py"
+    state: present
+    insertafter: '^def\s*start\(\)'
+    line: '    return'
+    backup: yes
+  with_items:
+    - gcodepoller
+    - github
+
 ##
 ## PIP DEPENDENCIES
 ##
