--- a/ansible/roles/slave/tasks/slave_Darwin.yml
+++ b/ansible/roles/slave/tasks/slave_Darwin.yml
@@ -81,14 +81,10 @@
   shell: "/usr/local/bin/buildslave create-slave . {{ buildmaster_host }}:{{ buildmaster_port }} {{ slave_username }} {{ slave_password }}"
   args:
     creates: buildbot.tac
+  notify: restart darwin buildbot
 
 - name: Update slave admin information
   template:
     src: buildbot_info_admin.j2
     dest: info/admin
-
-# Ignore errors in case the master is not yet started
-- name: Start slave (non-service)
-  shell: "nohup nice /usr/local/bin/buildslave restart"
-  ignore_errors: True
 
