Remove SDL dependency from Linux build

--- a/ansible/dpkg/control
+++ b/ansible/dpkg/control
@@ -2,7 +2,7 @@ Source: dolphin-emu-master
 Section: unknown
 Priority: optional
 Maintainer: unknown <buildbot@ububuild>
-Build-Depends: debhelper (>= 9), cmake, libsdl2-dev
+Build-Depends: debhelper (>= 9), cmake
 Standards-Version: 3.9.5
 Homepage: http://www.dolphin-emu.org
 #Vcs-Git: git://anonscm.debian.org/collab-maint/dolphin.git
