Wait for SSH to be ready before trying to connect

--- a/ansible/roles/common/tasks/common_Debian.yml
+++ b/ansible/roles/common/tasks/common_Debian.yml
@@ -1,4 +1,7 @@
 ---
+- name: Wait for SSH
+  local_action: wait_for port=22 host="{{ inventory_hostname }}" search_regex=OpenSSH
+
 ##
 ## APT
 ##
@@ -11,7 +14,6 @@
 - name: Update apt cache
   apt:
     update_cache: yes
-    cache_valid_time: 86400
 
 - name: Upgrade all safe packages
   apt:
