--- a/ansible/roles/slave/tasks/main.yml
+++ b/ansible/roles/slave/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - include: slave_Debian.yml tags=slave,buildbot,debian
-  when: ansible_hostname in groups['buildslaves'] and ansible_os_family == 'Debian'
+  when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'Debian'
 
 - include: slave_Darwin.yml tags=slave,buildbot,darwin
-  when: ansible_hostname in groups['buildslaves'] and ansible_os_family == 'Darwin'
+  when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'Darwin'
 
 - include: slave_Windows.yml tags=slave,buildbot,windows
-  when: ansible_hostname in groups['buildslaves'] and ansible_os_family == 'Windows'
+  when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'Windows'
 
