Move ubuntu to 15.04
* charybdis is broken on ubuntu 15.0, so migrate to inspircd
* python requests uses its own certificates, so append the self signed
  certificate to its certificate store instead of adding it to the system
  certificate store
* ffmpeg has become part of the official apt sources, so remove the external
  repository

--- a/ansible/group_vars/unix.yml
+++ b/ansible/group_vars/unix.yml
@@ -17,5 +17,5 @@ debian_release: jessie
 
 ubuntu_mirror: http://us.archive.ubuntu.com/ubuntu/
 ubuntu_security_mirror: http://security.ubuntu.com/ubuntu
-ubuntu_release: utopic
+ubuntu_release: vivid
 
