--- a/ansible/roles/www/tasks/nginx.yml
+++ b/ansible/roles/www/tasks/nginx.yml
@@ -16,6 +16,7 @@
   copy:
     src: nginx.conf
     dest: /etc/nginx/nginx.conf
+  notify: restart nginx
 
 - name: nginx | Link nginx log location
   file:
@@ -48,10 +49,4 @@
     flat: yes
     fail_on_missing: yes
     validate_checksum: yes
-
-- name: nginx | Start nginx
-  service:
-    name: nginx
-    state: started
-    enabled: yes
 
