--- a/ansible/roles/slave/tasks/w_qt.yml
+++ b/ansible/roles/slave/tasks/w_qt.yml
@@ -2,9 +2,9 @@
 ---
 - name: Clone Qt
   raw: "git clone {{ ext_win_qt_repository }} C:\\Qt"
-  ignore_errors: True
+  ignore_errors: yes
 
 - name: Add QTDIR
   raw: "powershell [Environment]::SetEnvironmentVariable('QTDIR', 'C:\\Qt\\Qt5.4.0\\5.4\\msvc2013_64_opengl', [EnvironmentVariableTarget]::Machine)"
-  ignore_errors: True
+  ignore_errors: yes
 
