--- a/ansible/group_vars/windows.yml
+++ b/ansible/group_vars/windows.yml
@@ -14,8 +14,8 @@ etc_hosts_file: 'c:\windows\system32\drivers\etc\hosts'
 #
 # Where to get the git binaries for windows
 #
-git_url: https://github.com/msysgit/msysgit/releases/download/Git-1.9.5-preview20150319
-git_file: Git-1.9.5-preview20150319.exe
+git_url: https://github.com/git-for-windows/git/releases/download/v2.5.3.windows.1
+git_file: Git-2.5.3-64-bit.exe
 
 #
 # Where to get the visual studio (net) installer
