Copy installer to local area only if it does not exist

--- a/ansible/roles/slave/tasks/windows_cache_download.yml
+++ b/ansible/roles/slave/tasks/windows_cache_download.yml
@@ -1,28 +1,31 @@
 ---
 # Get the installer either from the cache or from an external source.
 # Cache it if it was fetched externally.
+- name: Is local file present?
+  win_stat:
+    path: "{{ download_location }}/{{ file }}"
+  register: file_downloaded
+
+# Pull file from the cache if the file is not in the download area
 - name: Is file cached?
   win_stat:
     path: "{{ cache_location }}/{{ file }}"
     get_md5: no
   register: file_cached
+  when: not file_downloaded.stat.exists
 
 - name: Copy cached file to download area
   raw: "copy {{ cache_location }}\\{{ file }} {{ download_location }}\\{{ file }}"
-  when: file_cached.stat.exists
+  when: not file_downloaded.stat.exists and file_cached.stat.exists
 
-- name: Is file downloaded?
-  win_stat:
-    path: "{{ download_location }}/{{ file }}"
-  register: file_downloaded
-
+# Download when the file doesn't exist locally or in the cache
 - name: Download file
   win_get_url:
     url: "{{ base_url }}/{{ file }}"
     dest: "{{ download_location }}/{{ file }}"
-  when: not file_downloaded.stat.exists
+  when: not file_downloaded.stat.exists and not file_cached.stat.exists
 
-- name: Copy download file to cache
+- name: Copy downloaded file to cache
   raw: "copy {{ download_location }}\\{{ file }} {{ cache_location }}\\{{ file }}"
-  when: not file_cached.stat.exists
+  when: not file_downloaded.stat.exists and not file_cached.stat.exists
 
