--- a/ansible/roles/slave/tasks/w_visualstudio.yml
+++ b/ansible/roles/slave/tasks/w_visualstudio.yml
@@ -3,27 +3,37 @@
 
 - name: visual studio | Installed?
   win_stat:
-    path: "C:\\Program Files (x86)\\msbuild\\12.0\\bin"
+    path: "C:\\Program Files (x86)\\msbuild\\{{ vs_version }}\\bin"
   register: app
+
+- name: visual studio | Need to mount?
+  win_stat:
+    path: "d:\\vs_community.exe"
+  register: mount
 
 - name: visual studio | Mount ISO
   raw: "powershell mount-diskimage {{ download_location }}\\{{ file }}"
-  when: not app.stat.exists
+  when: not app.stat.exists and not mount.stat.exists
 
 - name: visual studio | Copy Unattended Deployment setup file to installer location
-  raw: "copy c:\\vagrant\\ansible\\roles\\slave\\files\\AdminDeployment.xml c:\\tmp\\AdminDeployment.xml"
+  raw: "copy c:\\vagrant\\ansible\\roles\\slave\\files\\AdminDeployment{{ vs_version }}.xml c:\\tmp\\AdminDeployment.xml"
   when: not app.stat.exists
 
 - name: visual studio | Install
-  raw: "d:\\vs_community.exe /silent /norestart /norefresh /adminfile c:\\tmp\\AdminDeployment.xml"
+  raw: "d:\\vs_community.exe /silent /norestart /norefresh /adminfile c:\\tmp\\AdminDeployment.xml /l c:\\tmp\\vslog.txt"
   when: not app.stat.exists
+
+- name: visual studio | Need to dismount?
+  win_stat:
+    path: "d:\\vs_community.exe"
+  register: mount
 
 - name: visual studio | Dismount ISO
   raw: "powershell dismount-diskimage {{ download_location }}\\{{ file }}"
-  when: not app.stat.exists
+  when: mount.stat.exists
 
 # build master calls msbuild.  It does not use nmake.
 - name: visual studio | Add msbuild to path
-  raw: "powershell [Environment]::SetEnvironmentVariable('Path', $env:Path + ';C:\\Program Files (x86)\\MSBuild\\12.0\\Bin', [EnvironmentVariableTarget]::Machine)"
+  raw: "powershell [Environment]::SetEnvironmentVariable('Path', $env:Path + ';C:\\Program Files (x86)\\MSBuild\\{{ vs_version }}\\Bin', [EnvironmentVariableTarget]::Machine)"
   when: not app.stat.exists
 
